--- a/inventory-list.html
+++ b/inventory-list.html
@@ -100,7 +100,7 @@
   function loadInventoryFromFirebase() {
     firebase.database().ref("inventory").once("value").then(snapshot => {
       const data = snapshot.val();
-      tableBody.innerHTML = "";
+      // tableBody removed
       if (!data) return;
       Object.entries(data).forEach(([key, item]) => {
         const row = document.createElement("tr");
@@ -296,7 +296,7 @@
         date: new Date().toLocaleString()
       });
       
-      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました`);
+      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
       
     }
 
