--- a/inventory-list.html
+++ b/inventory-list.html
@@ -86,7 +86,8 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script>
-  const firebaseConfig = {
+document.addEventListener('DOMContentLoaded', function() {
+const firebaseConfig = {
     apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
     authDomain: "zaiko-app-54fa6.firebaseapp.com",
     databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
@@ -100,7 +101,8 @@
   function loadInventoryFromFirebase() {
     firebase.database().ref("inventory").once("value").then(snapshot => {
       const data = snapshot.val();
-      // tableBody removed
+      const document.getElementById('inventoryTableBody') = document.getElementById("inventory-body");
+      document.getElementById('inventoryTableBody').innerHTML = "";
       if (!data) return;
       Object.entries(data).forEach(([key, item]) => {
         const row = document.createElement("tr");
@@ -114,7 +116,7 @@
           <td>${item.qty || 0}</td>
           <td>${item.date || ""}</td>
         `;
-        document.getElementById("firebaseTableBody").appendChild(row);
+        document.getElementById('inventoryTableBody').appendChild(row);
       });
     });
   }
@@ -122,6 +124,7 @@
   window.addEventListener("DOMContentLoaded", () => {
     loadInventoryFromFirebase();
   });
+});
 </script>
 </head>
 <body>
@@ -185,7 +188,7 @@
 
     function getPrefix(category) {
       if (category.includes("給湯器")) return "キ-";
-      if (category.includes("湯沸")) return "ユ-";
+      if (category.includes("湯沸器")) return "ユ-";
       if (category.includes("リモコン")) return "リ-";
       return "-";
     }
@@ -311,5 +314,5 @@
       
     }
   </script>
-</body>
+<div id="inventory-container"></div></body>
 </html>
