--- a/inventory-list.html
+++ b/inventory-list.html
@@ -324,7 +324,7 @@ const firebaseConfig = {
         date: new Date().toLocaleString()
       });
       
-      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
+      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました`);
       
     }
 
