--- a/inventory-list.html
+++ b/inventory-list.html
@@ -93,47 +93,6 @@ table {
     }
   </style>
 <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    loadInventoryFromFirebase();
-const firebaseConfig = {
-    apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
-    authDomain: "zaiko-app-54fa6.firebaseapp.com",
-    databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
-    projectId: "zaiko-app-54fa6",
-    storageBucket: "zaiko-app-54fa6.appspot.com",
-    messagingSenderId: "615970420186",
-    appId: "1:615970420186:web:8eab3b94d70da28f5bce3"
-  };
-  firebase.initializeApp(firebaseConfig);
-
-    function loadInventoryFromFirebase() {
-      firebase.database().ref("inventory").once("value").then(snapshot => {
-        const data = snapshot.val();
-        const tableBody = document.getElementById("inventory-body");
-        tableBody.innerHTML = "";
-        if (!data) return;
-        Object.entries(data).forEach(([key, item]) => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td><input type="checkbox" class="select-checkbox" data-id="${key}"></td>
-            <td>${item.user || ""}</td>
-            <td>${item.name || item.maker || ""}</td>
-            <td>${item.category || ""}</td>
-            <td>${item.site || ""}</td>
-            <td>${item.model || ""}</td>
-            <td>${item.qty || 0}</td>
-            <td>${item.date || ""}</td>
-          `;
-          tableBody.appendChild(row);
-        });
-    });
-  }
-
-});
-</script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/></head>
 <body>
 <div class="nav">
@@ -161,6 +120,49 @@ const firebaseConfig = {
 </thead>
 <tbody id="inventory-body"></tbody>
 </table>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+const firebaseConfig = {
+    apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
+    authDomain: "zaiko-app-54fa6.firebaseapp.com",
+    databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
+    projectId: "zaiko-app-54fa6",
+    storageBucket: "zaiko-app-54fa6.appspot.com",
+    messagingSenderId: "615970420186",
+    appId: "1:615970420186:web:8eab3b94d70da28f5bce3"
+  };
+  firebase.initializeApp(firebaseConfig);
+
+  function loadInventoryFromFirebase() {
+    firebase.database().ref("inventory").once("value").then(snapshot => {
+      const data = snapshot.val();
+      const tableBody = document.getElementById("inventory-body");
+      tableBody.innerHTML = "";
+      if (!data) return;
+      Object.entries(data).forEach(([key, item]) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td><input type="checkbox" class="select-checkbox" data-id="${key}"></td>
+          <td>${item.user || ""}</td>
+          <td>${item.name || item.maker || ""}</td>
+          <td>${item.category || ""}</td>
+          <td>${item.site || ""}</td>
+          <td>${item.model || ""}</td>
+          <td>${item.qty || 0}</td>
+          <td>${item.date || ""}</td>
+        `;
+        tableBody.appendChild(row);
+      });
+    });
+  }
+
+  window.addEventListener("DOMContentLoaded", () => {
+    loadInventoryFromFirebase();
+  });
+});
+</script>
 <script>
     const container = document.getElementById('inventoryContainer');
     let inventory = JSON.parse(localStorage.getItem('inventoryData') || '[]');
