--- a/inventory-list.html
+++ b/inventory-list.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
+
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>在庫一覧</title>
-  <style>
+<meta charset="utf-8"/>
+<title>在庫一覧</title>
+<style>
+.table-wrapper {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+table {
+  min-width: 800px;
+  table-layout: fixed;
+  width: 100%;
+}
+
     body { font-family: sans-serif; background: #f9f9f9; padding: 20px; color: #2c3e50; margin-top: 60px; }
     h1, h2 { text-align: center; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 30px; table-layout: fixed; }
@@ -81,12 +92,12 @@
       button { font-size: 13px; padding: 8px 12px; }
     }
   </style>
-
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script>
-  const firebaseConfig = {
+document.addEventListener("DOMContentLoaded", function() {
+const firebaseConfig = {
     apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
     authDomain: "zaiko-app-54fa6.firebaseapp.com",
     databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
@@ -123,41 +134,36 @@
   window.addEventListener("DOMContentLoaded", () => {
     loadInventoryFromFirebase();
   });
+});
 </script>
-
-</head>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/></head>
 <body>
-  <div class="nav">
-    <a href="zaiko-toroku.html">📥 在庫登録</a>
-    <a href="inventory-list.html">📋 未使用一覧</a>
-    <a href="inventory-used.html">✔ 使用済み一覧</a>
-    <a href="report.html">📜 使用履歴</a>
-  </div>
-
-  <button id="editModeButton" onclick="toggleEditMode()">🛠 編集モード</button>
-  <button id="deleteSelectedBtn" onclick="deleteSelectedItems()">🗑 選択削除</button>
-
-  <h1>📦 未使用 在庫一覧</h1>
-  <div id="inventoryContainer"></div>
-
+<div class="nav">
+<a href="zaiko-toroku.html">📥 在庫登録</a>
+<a href="inventory-list.html">📋 未使用一覧</a>
+<a href="inventory-used.html">✔ 使用済み一覧</a>
+<a href="report.html">📜 使用履歴</a>
+</div>
+<button id="editModeButton" onclick="toggleEditMode()">🛠 編集モード</button>
+<button id="deleteSelectedBtn" onclick="deleteSelectedItems()">🗑 選択削除</button>
+<h1>📦 未使用 在庫一覧</h1>
+<div id="inventoryContainer"></div>
 <table>
-  <thead>
-    <tr>
-      <th>チェック</th>
-      <th>登録者</th>
-      <th>メーカー</th>
-      <th>カテゴリ</th>
-      <th>現場名</th>
-      <th>型式</th>
-      <th>個数</th>
-      <th>仕入日</th>
-    </tr>
-  </thead>
-  <tbody id="inventory-body"></tbody>
+<thead>
+<tr>
+<th>チェック</th>
+<th>登録者</th>
+<th>メーカー</th>
+<th>カテゴリ</th>
+<th>現場名</th>
+<th>型式</th>
+<th>個数</th>
+<th>仕入日</th>
+</tr>
+</thead>
+<tbody id="inventory-body"></tbody>
 </table>
-
-
-  <script>
+<script>
     const container = document.getElementById('inventoryContainer');
     let inventory = JSON.parse(localStorage.getItem('inventoryData') || '[]');
     const usedReports = JSON.parse(localStorage.getItem('usedReports') || '[]');
