--- a/inventory-list.html
+++ b/inventory-list.html
@@ -136,7 +136,7 @@ const firebaseConfig = {
   });
 });
 </script>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/></head>
+<meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport"/></head>
 <body>
 <div class="nav">
 <a href="zaiko-toroku.html">📥 在庫登録</a>
@@ -324,7 +324,7 @@ const firebaseConfig = {
         date: new Date().toLocaleString()
       });
       
-      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました`);
+      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
       
     }
 
