--- a/inventory-list.html
+++ b/inventory-list.html
@@ -193,7 +193,7 @@ const firebaseConfig = {
   });
 });
 </script>
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/></head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"></head>
 <body>
 <div class="nav">
 <a href="zaiko-toroku.html">📥 在庫登録</a>
