--- a/inventory-list.html
+++ b/inventory-list.html
@@ -325,5 +325,5 @@ function updateCategory(id, newCategory) {
       
     }
   </script>
-<div id="inventoryContainer"></div></body>
+</body>
 </html>
