--- a/inventory-list.html
+++ b/inventory-list.html
@@ -298,7 +298,7 @@ if (!container) return;
         date: new Date().toLocaleString()
       });
       
-      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
+      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました`);
       
     }
 
